Bug: contact page height on mobile

--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -1,7 +1,7 @@
 .contact-main
   height: 100vh
   .contact-background
-    height: 120vh
+    height: 100vh
     h1
       padding-top: 70px
       color: red
@@ -23,7 +23,7 @@
     iframe
       display: flex
       width: 90%
-      height: 33vh
+      height: 40%
       margin: auto
 
 @media only screen and (min-width: 769px)
